@@ -29,5 +29,7 @@ class Net::SSLeay::X509_VERIFY_PARAM : pointer {
   
   native method get_flags : long ();
   
+  native method get_hostflags : int ();
+  
   native method DESTROY : void ();
 }
