@@ -2,6 +2,7 @@
   [New Features]
     * Add Net::SSLeay::X509_VERIFY_PARAM#clear_flags method.
     * Add Net::SSLeay::X509_VERIFY_PARAM#get_flags method.
+    * Add Net::SSLeay::X509_VERIFY_PARAM#get_hostflags method.
 0.022 2024-12-04
   [New Features]
     * Add Net::SSLeay::DH#new method.
